# research-tool

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.txt
src-tauri/icons/: README.txt
src-tauri/src/: main.rs
src/pages/: ConfigPage.jsx  HomePage.jsx  ReportPage.jsx
src/styles/: global.css
worker/: build_worker.bat  build_worker.sh  requirements.txt  worker.py
