[package]
name = "research-pilot"
version = "1.0.0"
description = "Research Pilot — AI-powered research report generator"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "shell-execute", "dialog-all", "fs-all", "shell-sidecar",
  "shell-open",
  "path-all",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
